@@ -1,7 +1,7 @@
 name     = Data-Skeleton
 abstract = Show just the keys of deep data structure
 copyright_holder = Mateu X Hunter
-copyright_year   = 2015
+copyright_year   = 2024
 
 [AutoPrereqs]
 [@Basic]
